# infoelectoral-gui

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE.md  README.md  build.bat  infoelectoral.spec  noia_elecciones.xlsx  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml
data/: municipios_inexistentes.json
data/municipios/: 2001.json  2002.json  2003.json  2004.json  2005.json  2006.json  2007.json  2008.json  2009.json  2010.json  2011.json  2012.json  2013.json  2014.json  2015.json  2016.json  2017.json  2018.json  2019.json  2020.json
examples/noia/: README.md  candidaturas_pre2003_noia.json  extract_noia_excel.py  locales_electorales_noia.json  regression_user_files.py
scripts/: extract_constants.py  gui_smoke.py  smoke_test.py
src/infoelectoral/: __init__.py  __main__.py  constants.py  exporter.py  formats.py  municipios.py  parser.py  resources.py  settings.py
src/infoelectoral/gui/: about_dialog.py  app.py  data_model.py  drop_zone.py  main_window.py  preset_dialog.py  theme.py
