[project]
name = "infoelectoral-noia"
version = "0.1.0"
description = "Visor y exportador de ficheros .DAT del Ministerio del Interior. Inspecciona, filtra por Noia/Barbanza y exporta a CSV limpio."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
